# TEd

./: .gitattributes  CMakeLists.txt  CMakeSettings.json  cpp.hint  merge_dir.ps1  utils.cmake
fptest/: CMakeLists.txt
fptest/main/: main.c
fptest/shared/: shared.c  shared.h
ted/: CMakeLists.txt
ted/source/: main.c  ted.c
tedcore/: CMakeLists.txt  README.txt
tedcore/extensions/: test.ted
tedcore/include/tedcore/: tedcore.hpp
tedcore/include/tedcore/backend/: impl.hpp
tedcore/include/tedcore/backend/tedlapi/: brush.hpp  line.hpp  rect.hpp
tedcore/include/tedcore/backend/windows/: ted.hpp
tedcore/src/: tedcore.cpp
tedcore/src/backend/: api.cpp  impl.cpp
tedcore/src/backend/tedlapi/: brush.cpp  line.cpp  rect.cpp
tedcore/src/backend/windows/: main.cpp  ted.cpp
tedlang/: CMakeLists.txt  README.txt
tedlang/include/tedlang/: tedl.h
tedlang/include/tedlang/builtin/: arr.h  bool.h  char.h  float.h  fn.h  int.h  null.h  str.h
tedlang/include/tedlang/core/: arr.h  eval.h  import.h  int.h  obj.h  scope.h
tedlang/include/tedlang/interpreter/: eval.h
tedlang/include/tedlang/parse/: lexer.h  parser.h
tedlang/include/tedlang/util/: string.h
tedlang/include/tedslib/io/: io.h
tedlang/include/tedslib/os/: cptr.h  os.h
tedlang/samples/: hello_world.ted
tedlang/src/: main.c
tedlang/src/builtin/: arr.c  bool.c  char.c  float.c  fn.c  int.c  null.c  str.c
tedlang/src/core/: eval.c  int.c  obj.c  scope.c
tedlang/src/core/windows/: import.c
tedlang/src/interpreter/: eval.c
tedlang/src/parse/: lexer.c  parser.c
tedlang/src/tedlang/: main.c
tedlang/src/tedlang/builtin/: arr.c  bool.c  char.c  float.c  fn.c  int.c  null.c  str.c
tedlang/src/tedlang/core/: eval.c  obj.c  scope.c
tedlang/src/tedlang/core/windows/: import.c
tedlang/src/tedlang/parse/: lexer.c  parser.c
tedlang/src/tedlang/util/: string.asm
tedlang/src/tedslib/io/: io.c  print.c
tedlang/src/tedslib/os/: close_lib.c  cptr.c  load_proc.c  open_lib.c  os.c
tedlang/src/util/: string.asm
tedtext/: CMakeLists.txt  README.txt
tedui/: CMakeLists.txt  tedui.ted
tedui/include/tedui/: tedui.hpp
tedui/src/: tedui.cpp
tedwin/: CMakeLists.txt  README.txt
telang/: CMakeLists.txt
telang/include/telang/: telapi.h
telang/include/telang/core/: arr.h  int.h  obj.h  str.h
telang/include/telang/interpreter/: eval.h
telang/include/telang/parse/: lexer.h  parser.h
telang/samples/: hello_world.te
telang/src/: main.c
telang/src/core/: arr.c  int.c  obj.c  str.c
telang/src/interpreter/: eval.c
telang/src/parse/: lexer.c  parser.c
tesh/: CMakeLists.txt
tesh/include/tesh/core/: arr.h  int.h  obj.h  str.h
tesh/include/tesh/parse/: lexer.h  parser.h
tesh/samples/: hello_world.ted
tesh/src/core/: arr.c  int.c  obj.c  str.c
tesh/src/interpreter/: eval.c
tesh/src/parse/: lexer.c  parser.c
